// Vitest Snapshot v1

exports[`should generate sidebarData correctly > Should resolve structure in dir 1`] = `
{
  "/dir-negative-order/": [
    "README.md",
    "file2.md",
    "file4.md",
    "file3.md",
    "file1.md",
  ],
  "/dir-no-order/": [
    "README.md",
    "file1.md",
    "file2.md",
    "file3.md",
    "file4.md",
  ],
  "/dir/": [
    "README.md",
    "file2.md",
    "file4.md",
    "file1.md",
  ],
  "/link/": [
    "README.md",
    "file2.md",
    "file4.md",
    "file1.md",
  ],
  "/nested-dir/": [
    "README.md",
    "file2.md",
    {
      "children": [
        "README.md",
        "file2.md",
        {
          "children": [
            "README.md",
            "file2.md",
            "file4.md",
            "file1.md",
          ],
          "collapsable": true,
          "icon": "dir-icon",
          "prefix": "nested-dir2/",
          "text": "Dir2",
        },
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "nested-dir1/",
      "text": "Dir1",
    },
    "file4.md",
    "file1.md",
  ],
  "/nested-dir/nested-dir1/": [
    "README.md",
    "file2.md",
    {
      "children": [
        "README.md",
        "file2.md",
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "nested-dir2/",
      "text": "Dir2",
    },
    "file4.md",
    "file1.md",
  ],
  "/options/": [
    "README.md",
    "file2.md",
    "file4.md",
    "file1.md",
  ],
}
`;

exports[`should generate sidebarData correctly > Should resolve structure in group options 1`] = `
{
  "/nested-dir/nested-dir1/": [
    "README.md",
    "file2.md",
    {
      "children": [
        "README.md",
        "file2.md",
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "nested-dir2/",
      "text": "Dir2",
    },
    "file4.md",
    "file1.md",
  ],
}
`;

exports[`should generate sidebarData correctly > Should resolve structure in root 1`] = `
{
  "/": [
    "README.md",
    {
      "children": [
        "README.md",
        "file2.md",
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "dir/",
      "text": "Dir",
    },
    {
      "children": [
        "README.md",
        "file2.md",
        "file4.md",
        "file3.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "dir-negative-order/",
      "text": "Dir",
    },
    {
      "children": [
        "README.md",
        "file1.md",
        "file2.md",
        "file3.md",
        "file4.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "dir-no-order/",
      "text": "Dir",
    },
    {
      "children": [
        "README.md",
        "file3.md",
        "file2.md",
        "file1.md",
        "file4.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "dir-positive-order/",
      "text": "Dir",
    },
    {
      "children": [
        "README.md",
        "file2.md",
        {
          "children": [
            "README.md",
            "file2.md",
            {
              "children": [
                "README.md",
                "file2.md",
                "file4.md",
                "file1.md",
              ],
              "collapsable": true,
              "icon": "dir-icon",
              "prefix": "nested-dir2/",
              "text": "Dir2",
            },
            "file4.md",
            "file1.md",
          ],
          "collapsable": true,
          "icon": "dir-icon",
          "prefix": "nested-dir1/",
          "text": "Dir1",
        },
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "dir-icon",
      "prefix": "nested-dir/",
      "text": "Dir",
    },
    {
      "children": [
        "file2.md",
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "my-icon",
      "link": "/link/",
      "prefix": "link/",
      "text": "Dir with link",
    },
    {
      "children": [
        "README.md",
        "file2.md",
        "file4.md",
        "file1.md",
      ],
      "collapsable": true,
      "icon": "my-icon",
      "prefix": "options/",
      "text": "Dir with options",
    },
  ],
}
`;
